Added swagger and graphql functions
