# Assignment 2/express/src/swagger/handlers.js
@@ -2,21 +2,29 @@ const dudeService = require('../service/dudeService');
 
 module.exports = {
     addDude: function (req, res) {
-        dudeService.addDude(req.body.name, req.body.friends, req.body.status);
-        console.log('addDude', req.body);
-        res.status(200).json([]);
+        const dude = dudeService.addDude(req.body.name);
+        return dude.then((dude) => {
+            res.status(200).json(dude);
+        });
     },
     addFriend: function (req, res) {
-        console.log('addFriend', req.swagger);
-        res.status(200).json({});
+        const dude = dudeService.addFriend(req.swagger.params.dudeId, req.swagger.params.friendId);
+        return dude.then((dude) => {
+            res.status(200).json(dude);
+        });
     },
     findDudesByStatus: function (req, res) {
-        console.log('findDudesByStatus', req.swagger);
-        res.status(200).json({});
+        console.log(req);
+        const dudes = dudeService.findByStatus(req.query.status);
+        return dudes.then((dudes) => {
+            res.status(200).json(dudes);
+        });
     },
     getDudeById: function (req, res) {
-        console.log('getDudeById', req.swagger);
-        res.status(200).json({});
+        const dude = dudeService.findById(req.swagger.params.dudeId);
+        return dude.then((dude) => {
+            res.status(200).json(dude);
+        });
     },
     updateDudeWithForm: function (req, res) {
         console.log('updateDudeWithForm', req.swagger);
