# Assignment 2/express/src/swagger/swagger.yml
@@ -144,64 +144,6 @@ paths:
         404:
           description: "Dude not found"
       x-swagger-router-controller: "Dude"
-    post:
-      tags:
-      - "dude"
-      summary: "Updates a dude in the list with form data"
-      description: ""
-      operationId: "updateDudeWithForm"
-      consumes:
-      - "application/x-www-form-urlencoded"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - name: "dudeId"
-        in: "path"
-        description: "ID of dude that needs to be updated"
-        required: true
-        type: "integer"
-        format: "int64"
-      - name: "name"
-        in: "formData"
-        description: "Updated name of the dude"
-        required: false
-        type: "string"
-      - name: "status"
-        in: "formData"
-        description: "Updated status of the dude"
-        required: false
-        type: "string"
-      responses:
-        405:
-          description: "Invalid input"
-      x-swagger-router-controller: "Dude"
-    delete:
-      tags:
-      - "dude"
-      summary: "Deletes a dude"
-      description: ""
-      operationId: "deleteDude"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - name: "api_key"
-        in: "header"
-        required: false
-        type: "string"
-      - name: "dudeId"
-        in: "path"
-        description: "Dude id to delete"
-        required: true
-        type: "integer"
-        format: "int64"
-      responses:
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Dude not found"
-      x-swagger-router-controller: "Dude"
 definitions:
   Dude:
     type: "object"
